appId: com.leadenhallworks.mobile
---
- launchApp:
    clearState: true
    clearKeychain: true
- openLink: "leadenhallworks://expo-development-client/?url=http%3A%2F%2F127.0.0.1%3A8081"
- extendedWaitUntil:
    visible: "Account"
    timeout: 30000
- tapOn: "Account"
- assertVisible: "Sign in"
- tapOn:
    id: "login-email"
- inputText: ${E2E_EMAIL}
- tapOn: "Login password"
- inputText: ${E2E_PASSWORD}
- tapOn:
    point: "50%,20%"
- tapOn:
    id: "submit-login"
- tapOn:
    point: "50%,75%"

- extendedWaitUntil:
    visible: "Home Dashboard"
    timeout: 60000