appId: com.leadenhallworks.mobile
---
- launchApp:
    clearState: true
    clearKeychain: true
- openLink: "leadenhallworks://expo-development-client/?url=http%3A%2F%2F127.0.0.1%3A8081"
- extendedWaitUntil:
    visible: "Account"
    timeout: 60000
- assertVisible: "THE LEADENHALL WORKS"
- tapOn:
    id: "home-menu-button"
- extendedWaitUntil:
    visible: "Memberships"
    timeout: 30000
- assertVisible: "Meeting Room"
- assertVisible: "Contact"
